when a task is finished, offer to go to the project home rather than the user home

--- a/templates/module-finished.html
+++ b/templates/module-finished.html
@@ -32,6 +32,8 @@
     {% if supermodule and supermodule.question.task.editor == request.user %}
       <p class="text-success">This module is complete.</p>
       <p><a href="{{supermodule.question.task.get_absolute_url}}" class="btn btn-primary">Continue Answering {{supermodule.question.task.title}} &raquo;</a></p>
+    {% elif task.project %}
+      <p class="text-success">This module is complete. Continue with <a href="{{task.project.get_absolute_url}}">other modules in {{task.project.title}}</a>.</p>
     {% else %}
       <p class="text-success">This module is complete. Go to <a href="/">your home</a> to work on other modules.</p>
     {% endif %}
