--- a/templates/module-finished.html
+++ b/templates/module-finished.html
@@ -29,9 +29,9 @@
 
 <div style="margin: 2em 0">
   {% with supermodule=task.is_answer_to_unique %}
-    {% if supermodule and supermodule.question.task.editor == request.user %}
+    {% if supermodule and supermodule.task.editor == request.user %}
       <p class="text-success">This module is complete.</p>
-      <p><a href="{{supermodule.question.task.get_absolute_url}}" class="btn btn-primary">Continue Answering {{supermodule.question.task.title}} &raquo;</a></p>
+      <p><a href="{{supermodule.task.get_absolute_url}}" class="btn btn-primary">Continue Answering {{supermodule.task.title}} &raquo;</a></p>
     {% elif task.project %}
       <p class="text-success">This module is complete. Continue with <a href="{{task.project.get_absolute_url}}">other modules in {{task.project.title}}</a>.</p>
     {% else %}
@@ -60,7 +60,7 @@
     <div role="tabpanel" class="tab-pane" id="questions">
         <p>Click on any question to change your answer.</p>
         {% for q in all_questions %}
-            <p><a href="?q={{q.id}}">{{q.title}}</a></p>
+            <p><a href="?q={{q.key}}">{{q.spec.title}}</a></p>
         {% endfor %}        
     </div>
   </div>
