don't show project owners list if the user is the only member of all their projects (home page) or of that project (project page), to simplify the UI when a user is just starting

--- a/templates/home.html
+++ b/templates/home.html
@@ -40,7 +40,7 @@ Home
     {% endif %}
   </a>
 
-  {% if project %}
+  {% if project and any_have_members_besides_me %}
   <div class="admins small" style="margin-top: 3px">
     owners:
     {% for user in project.get_admins %}
