'Who can see this conversation?' should only be visible if there is a Discussion

--- a/templates/discussion.html
+++ b/templates/discussion.html
@@ -98,7 +98,7 @@
       </form>
     </div>
 
-    <p class="small">
+    <p class="small active-discussion-only" style="display: none">
       Who can see this conversation? <span class="fillin-project_name"></span> members<span class="fillin-guests"></span>.
       <a id="invite-guest" href="javascript:invite_user_to_discussion()">Invite Colleague</a>
     </p>
