--- a/templates/question.html
+++ b/templates/question.html
@@ -97,9 +97,9 @@ Next Question: {{q.spec.title}}
                   <p class="help-block">You may choose at most {{q.spec.max}} options.</p>
               {% endif %}
 
-            {% elif q.spec.type == "integer" %}
+            {% elif q.spec.type == "integer" or q.spec.type == "real" %}
               <div class="form-group">
-                <input name="value" type="number" step="1" class="form-control" id="inputctrl" placeholder="{{q.spec.placeholder}}" {% if answer.value %}value="{{answer.value}}"{% endif %}>
+                <input name="value" type="number" {% if q.spec.type == "integer" %}step="1"{% else %}step="any"{% endif %} class="form-control" id="inputctrl" placeholder="{{q.spec.placeholder}}" {% if answer.value %}value="{{answer.value}}"{% endif %}>
                 <p class="help-block">{{q.spec.help}}</p>
                 {% if q.spec.min|default_if_none:"NONE" != "NONE" and q.spec.max|default_if_none:"NONE" != "NONE" %}
                     <p class="help-block">Enter a number from {{q.spec.min}} to {{q.spec.max}}.</p>
@@ -240,7 +240,7 @@ $(function() {
     show_static_history({{history|json}});
     {% endif %}
 
-    {% if q.spec.type == "text" or q.spec.type == "password" or q.spec.type == "email-address" or q.spec.type == "longtext" or q.spec.type == "integer" %}
+    {% if q.spec.type == "text" or q.spec.type == "password" or q.spec.type == "email-address" or q.spec.type == "longtext" or q.spec.type == "integer" or q.spec.type == "real" %}
     function validate_answer() {
         var val = $('#inputctrl').val();
         if (/^ *$/.exec(val))
