--- a/templates/project.html
+++ b/templates/project.html
@@ -23,104 +23,129 @@
   .task.deleted .delete-task:after {
     content: "(undo)";
   }
+
+#project-members .admin {
+  font-style: italic;
+  font-size: 85%;
+}
+#project-members .you {
+  font-weight: bold;
+  font-size: 85%;
+}
 </style>
 {% endblock %}
 
 {% block body %}
-<div style="margin-bottom: 2em">
-  <h1 style="margin: 1em 0 0 0">{{title}}</h1>
+<h1 style="margin: 1em 0 0 0">{{title}}</h1>
 
-  {% if project_has_members_besides_me %}
-  <div class="admins small" style="margin-top: 3px">
-    owners:
-    {% for user in project.get_admins %}
-      {{user}}
+<div class="row">
+
+  <div class="col-sm-3 col-sm-push-9">
+    {% if project %}
+    <div class="well">
+      {% if project_has_members_besides_me %}
+        <div style="margin-bottom: 1em">
+          <h3 style="margin: 0 0 .5em 0">Members</h3>
+          <div id="project-members">
+            {% for pmbr in project_members %}
+              <div>
+                {{pmbr.user}}
+                {% if pmbr.is_admin %}<span class="admin">admin</span>{% endif %}
+                {% if pmbr.user == request.user %}<span class="you">you</span>{% endif %}
+              </div>
+            {% endfor %}
+          </div>
+        </div>
+      {% endif %}
+
+      {% if send_invitation.can_add_invitee_to_team %}
+        <div>
+          <button class="btn btn-warning" onclick="return invite_user_into_project();">Invite to Project ...</button>
+        </div>
+      {% endif %}
+
+      {% if open_invitations %}
+        <div id="open-invitations-container">
+          <h3>Invitations waiting for a response...</h3>
+          <div class="invitation-list">
+          {% for inv in open_invitations %}
+            <p data-invitation-id="{{inv.id}}">
+              You invited {{inv.to_display}} {{inv.purpose}} on {{inv.created|date}}.
+              (<a href="#" onclick="return cancel_invitation(this, function() { if ($('#open-invitations-container .invitation-list p').length == 0) { $('#open-invitations-container').remove(); } });">cancel</a>)
+            </p>
+          {% endfor %}
+          </div>
+        </div>
+      {% endif %}
+    </div>
+    {% endif %}
+  </div>
+
+  <div class="col-sm-9 col-sm-pull-3">
+
+    {% if tasks or can_begin_module %} {# dont show if no permission to start a module #}
+    <h2>
+      {% if project %}Modules you are editing
+      {% else %}Modules{% endif %}
+    </h2>
+    {% for task in tasks %}
+      <p class="task" data-id="{{task.id}}">
+        <span>
+      	 <a href="{{task.get_absolute_url}}{% if not task.is_finished %}/start{% endif %}">{{task.title}}</a> ({{task.get_status_display}})
+        </span>
+      	<i class="delete-task glyphicon glyphicon-trash"></i>
+      </p>
     {% empty %}
-      (none) {# well that's odd #}
+      <p>You have not started any modules in this project.</p>
     {% endfor %}
+    {% endif %}
+
+    {% if others_tasks|length %}
+      <h2>Other modules in this project (edited by others)</h2>
+      {% for task in others_tasks %}
+        <p class="task" data-id="{{task.id}}">
+          <span>
+          	<a href="{{task.get_absolute_url}}">{{task.title}}</a> (edited by {{task.editor}}; {{task.get_status_display}})
+          </span>
+        	{% if is_admin %}<i class="delete-task glyphicon glyphicon-trash"></i>{% endif %}
+        </p>
+      {% endfor %}
+    {% endif %}
+
+    {% if discussions|length %}
+      <h2>Discussions you are participating in as a guest</h2>
+      {% for discussion in discussions %}
+        <p><a href="{{discussion.get_absolute_url}}">{{discussion.title}}</a></p>
+      {% endfor %}
+    {% endif %}
+
+    {% if can_begin_module %}
+      {# can only start a new module within a project you are the admin of #}
+      <hr>
+
+      <form class="form-inline" method="post" action="/tasks/start" onsubmit="if ($('#start-module').val() == '') { alert('Select a module.'); return false; }">
+        <input type="hidden" name="project" value="{{project.id}}"/>
+        {% csrf_token %}
+        <div class="form-group" style="margin-right: 1em">
+          <label for="start-module">Start answering a new module...</label>
+          <br>
+          <select id="start-module" class="form-control" name="module">
+            <option value="">Select...</option>
+            {% for m in startable_modules %}
+              <option value="{{m.id}}">{{m.title}}</option>
+            {% endfor %}
+          </select>
+        </div>
+        <div class="form-group" style="margin-right: 1em">
+          <label></label>
+          <br>
+          <button type="submit" class="btn btn-primary">Start Module</button>
+          <button class="btn btn-warning" onclick="return invite_user_to_start_module();">Invite to Answer ...</button>
+        </div>
+      </form>
+    {% endif %}
   </div>
-  {% endif %}
 </div>
-
-{% if send_invitation.can_add_invitee_to_team %}
-<div style="float: right" class="clearfix">
-  <button class="btn btn-warning" onclick="return invite_user_into_project();">Invite to Project ...</button>
-</div>
-{% endif %}
-
-{% if open_invitations %}
-  <h2>Invitations waiting for a response...</h2>
-  <div class="invitation-list">
-  {% for inv in open_invitations %}
-    <p data-invitation-id="{{inv.id}}">
-      You invited {{inv.to_display}} {{inv.purpose}} on {{inv.created|date}}.
-      (<a href="#" onclick="return cancel_invitation(this);">cancel</a>)
-    </p>
-  {% endfor %}
-  </div>
-{% endif %}
-
-{% if tasks or can_begin_module %} {# dont show if no permission to start a module #}
-<h2>
-  {% if project %}Modules you are editing
-  {% else %}Modules{% endif %}
-</h2>
-{% for task in tasks %}
-  <p class="task" data-id="{{task.id}}">
-    <span>
-  	 <a href="{{task.get_absolute_url}}{% if not task.is_finished %}/start{% endif %}">{{task.title}}</a> ({{task.get_status_display}})
-    </span>
-  	<i class="delete-task glyphicon glyphicon-trash"></i>
-  </p>
-{% empty %}
-  <p>You have not started any modules in this project.</p>
-{% endfor %}
-{% endif %}
-
-{% if others_tasks|length %}
-  <h2>Other modules in this project (edited by others)</h2>
-  {% for task in others_tasks %}
-    <p class="task" data-id="{{task.id}}">
-      <span>
-      	<a href="{{task.get_absolute_url}}">{{task.title}}</a> (edited by {{task.editor}}; {{task.get_status_display}})
-      </span>
-    	{% if is_admin %}<i class="delete-task glyphicon glyphicon-trash"></i>{% endif %}
-    </p>
-  {% endfor %}
-{% endif %}
-
-{% if discussions|length %}
-  <h2>Discussions you are participating in as a guest</h2>
-  {% for discussion in discussions %}
-    <p><a href="{{discussion.get_absolute_url}}">{{discussion.title}}</a></p>
-  {% endfor %}
-{% endif %}
-
-{% if can_begin_module %}
-  {# can only start a new module within a project you are the admin of #}
-  <hr>
-
-  <form class="form-inline" method="post" action="/tasks/start" onsubmit="if ($('#start-module').val() == '') { alert('Select a module.'); return false; }">
-    <input type="hidden" name="project" value="{{project.id}}"/>
-    {% csrf_token %}
-    <div class="form-group" style="margin-right: 1em">
-      <label for="start-module">Start answering a new module...</label>
-      <br>
-      <select id="start-module" class="form-control" name="module">
-        <option value="">Select...</option>
-        {% for m in startable_modules %}
-          <option value="{{m.id}}">{{m.title}}</option>
-        {% endfor %}
-      </select>
-    </div>
-    <div class="form-group" style="margin-right: 1em">
-      <label></label>
-      <br>
-      <button type="submit" class="btn btn-primary">Start Module</button>
-      <button class="btn btn-warning" onclick="return invite_user_to_start_module();">Invite to Answer ...</button>
-    </div>
-  </form>
-{% endif %}
 
 {% endblock %}
 
@@ -143,7 +168,7 @@ $(function() {
      success: function(res) {
        task_node.toggleClass('deleted', !task_is_deleted);
      }
-    });		
+    });
 	})
 })
 
