--- a/templates/home.html
+++ b/templates/home.html
@@ -26,7 +26,7 @@ Home
 </div>
 
 <div style="float: right; margin-bottom: 1em">
-  <a href="/tasks/new-project" class="btn btn-success"><i class="glyphicon glyphicon-plus"></i> New Project</a>
+  <a href="/new-project" class="btn btn-success"><i class="glyphicon glyphicon-plus"></i> New Project</a>
 </div>
 <div class="clearfix"> </div>
 
